--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,24 @@
 <body>
 <app-root></app-root>
 <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script>
+    // TODO: Http2 ???
+    // https://noelmace.github.io/web-on-fire/
+
+    // Check that service workers are registered
+    // if ('serviceWorker' in navigator) {
+    //     // Use the window load event to keep the page load performant
+    //     window.addEventListener('load', () => {
+    //         navigator.serviceWorker.register('/service-worker.js').then(function (registration) {
+    //             // debugger;
+    //             console.log('???');
+    //         });
+    //         navigator.serviceWorker.ready.then(function (registration) {
+    //             // debugger;
+    //             console.log('Service Worker ready');
+    //         });
+    //     });
+    // }
+</script>
 </body>
 </html>
